# bib2x

./: AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
include/: CMakeLists.txt  Makefile.am  Makefile.in  atom.h  atomdata.h  atomdata3dpoint.h  atomdatabinary.h  atomdatafile.h  atomdatafilelink.h  atomdatainteger.h  atomdatareal.h  atomdatastring.h  bib.h  class.h  entries.h  generic.h  keyname.h  latexconv.h  object.h  odb.h  output.h  outputhtml.h  outputodb.h  reason.h  root.h  rope.h  rtti.h  stream.h  template.h  transaction.h  utfconv.h
src/: CMakeLists.txt  Makefile.am  Makefile.in  atomdatabinary.cxx  atomdatafile.cxx  atomdatastring.cxx  bib.cxx  bib.l  bib.tab.cxx  bib.tab.h  bib.y  entries.cxx  latexconv.cxx  lex.yy.cxx  main.cxx  odb.cxx  output.cxx  outputhtml.cxx  root.cxx  stream.cxx  template.cxx  template.l  template.tab.cxx  template.tab.h  template.y  template.yy.cxx  utfconv.cxx  yacc_makefile
src/odb/: CMakeLists.txt  atom.cxx  atomdata.cxx  atomdata3dpoint.cxx  atomdatafilelink.cxx  atomdatainteger.cxx  atomdatareal.cxx  class.cxx  keyname.cxx  object.cxx  reason.cxx  rope.cxx  transaction.cxx
templates/: CMakeLists.txt  Makefile.am  Makefile.in  tempA.late  tempBib.late  tempCV.late  tempCpp.late  tempHTML.late  tempRTF.late  tempmini.late
