SUBDIRS = 

EXTRA_DIST = bib.h entries.h latexconv.h output.h outputhtml.h outputodb.h template.h utfconv.h atom.h atomdata.h atomdata3dpoint.h atomdatabinary.h atomdatafile.h atomdatafilelink.h atomdatainteger.h atomdatareal.h atomdatastring.h class.h generic.h keyname.h object.h odb.h reason.h root.h rope.h rtti.h stream.h transaction.h

install-data-local:
	$(mkinstalldirs) $(prefix)/include
	$(INSTALL_DATA) bib.h $(prefix)/include/bib.h
	$(INSTALL_DATA) entries.h $(prefix)/include/entries.h
	$(INSTALL_DATA) latexconv.h $(prefix)/include/latexconv.h
	$(INSTALL_DATA) output.h $(prefix)/include/output.h
	$(INSTALL_DATA) outputhtml.h $(prefix)/include/outputhtml.h
	$(INSTALL_DATA) outputodb.h $(prefix)/include/outputodb.h
	$(INSTALL_DATA) template.h $(prefix)/include/template.h
	$(INSTALL_DATA) utfconv.h $(prefix)/include/utfconv.h
	$(INSTALL_DATA) atom.h $(prefix)/include/atom.h
	$(INSTALL_DATA) atomdata.h $(prefix)/include/atomdata.h
	$(INSTALL_DATA) atomdata3dpoint.h $(prefix)/include/atomdata3dpoint.h
	$(INSTALL_DATA) atomdatabinary.h $(prefix)/include/atomdatabinary.h
	$(INSTALL_DATA) atomdatafile.h $(prefix)/include/atomdatafile.h
	$(INSTALL_DATA) atomdatafilelink.h $(prefix)/include/atomdatafilelink.h
	$(INSTALL_DATA) atomdatainteger.h $(prefix)/include/atomdatainteger.h
	$(INSTALL_DATA) atomdatareal.h $(prefix)/include/atomdatareal.h
	$(INSTALL_DATA) atomdatastring.h $(prefix)/include/atomdatastring.h
	$(INSTALL_DATA) class.h $(prefix)/include/class.h
	$(INSTALL_DATA) generic.h $(prefix)/include/generic.h
	$(INSTALL_DATA) keyname.h $(prefix)/include/keyname.h
	$(INSTALL_DATA) object.h $(prefix)/include/object.h
	$(INSTALL_DATA) odb.h $(prefix)/include/odb.h
	$(INSTALL_DATA) reason.h $(prefix)/include/reason.h
	$(INSTALL_DATA) root.h $(prefix)/include/root.h
	$(INSTALL_DATA) rope.h $(prefix)/include/rope.h
	$(INSTALL_DATA) rtti.h $(prefix)/include/rtti.h
	$(INSTALL_DATA) stream.h $(prefix)/include/stream.h
	$(INSTALL_DATA) transaction.h $(prefix)/include/transaction.h

