SUBDIRS = 

EXTRA_DIST = tempA.late tempBib.late tempCV.late tempCpp.late tempHTML.late tempRTF.late tempmini.late

install-data-local:
	$(mkinstalldirs) $(prefix)/templates
	$(INSTALL_DATA) tempA.late $(prefix)/templates/tempA.late
	$(INSTALL_DATA) tempBib.late $(prefix)/templates/tempBib.late
	$(INSTALL_DATA) tempCV.late $(prefix)/templates/tempCV.late
	$(INSTALL_DATA) tempCpp.late $(prefix)/templates/tempCpp.late
	$(INSTALL_DATA) tempHTML.late $(prefix)/templates/tempHTML.late
	$(INSTALL_DATA) tempRTF.late $(prefix)/templates/tempRTF.late
	$(INSTALL_DATA) tempmini.late $(prefix)/templates/tempmini.late

